# jisho-chibi-rs

./: Cargo.toml  PKGBUILD  README.org  jisho-chibi.desktop
src/: colors.rs  main.rs  style.css
