[package]
name = "jisho-chibi"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced={ version = "0.14", features = ["tokio"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.96"
